--- a/ISchool/Pages/Shared/_Head.cshtml
+++ b/ISchool/Pages/Shared/_Head.cshtml
@@ -55,3 +55,4 @@
 <link href="assets/css/demo1/skins/aside/dark.css" rel="stylesheet" type="text/css" />        <!--end::Layout Skins -->
 
 <link rel="shortcut icon" href="assets/media/logos/favicon.ico" />
+@RenderSection("Styles", required: false)
