--- a/ISchool/Pages/Shared/_Scripts.cshtml
+++ b/ISchool/Pages/Shared/_Scripts.cshtml
@@ -83,3 +83,4 @@
 <!--begin::Page Scripts(used by this page) -->
 <script src="assets/js/demo1/pages/dashboard.js" type="text/javascript"></script>
 <!--end::Page Scripts -->
+@RenderSection("Scripts", required: false)
